mule-user-guide/v/3.8/microsoft-dynamics-ax-2012-connector.adoc
=  Microsoft Dynamics AX 2012连接器
:keywords: anypoint studio, connector, endpoint, microsoft, erp, ax query
：imagesdir：./_images

== 介绍

Microsoft Dynamics AX 2012连接器使Mule应用程序能够与Microsoft Dynamics AX查询服务进行交互。 Microsoft Dynamics AX是一个企业资源计划（ERP）应用程序。

*Release Notes*： link:/release-notes/microsoft-dynamics-ax-2012-connector-release-notes[Microsoft Dynamics AX 2012连接器发行说明]

*Example Apps Using Connector*： link:_attachments/dynamics-ax-2012-samples.zip[dynamics-ax-2012-samples.zip]

Microsoft Dynamics AX 2012连接器支持以下操作：

[%header%autowidth.spread]
|===
| {操作{1}}说明
| *Query table*  |针对应用程序对象树（AOT）表运行查询。有关更多信息，请参阅Microsoft link:https://msdn.microsoft.com/EN-US/library/bb314725.aspx[AOT表]网站。
| *Static query*  |运行 link:https://msdn.microsoft.com/en-us/library/bb394994.aspx[AOT静态查询]。 +
| *Document Service*  |呼叫 link:https://technet.microsoft.com/EN-US/library/bb496530.aspx[AIF文件服务]。
|===

== 先决条件

运行Dynamics AX连接器之前必须满足以下先决条件：

* 安装 link:/mule-user-guide/v/3.8/windows-gateway-services-guide[Windows网关服务]


用于Anypoint平台的===  Windows网关服务

调用Dynamics AX系统服务时， link:https://repository-master.mulesoft.org/nexus/content/repositories/releases/org/mule/modules/anypoint-windows-gateway-service/1.6.0/anypoint-windows-gateway-service-1.6.0.zip[Windows网关服务]代理执行协议转换。 Dynamics AX系统服务（元数据服务，查询服务）使用未在Java中实现的`net.tcp`协议。

要执行请求，连接器按照以下方式通过Windows网关服务路由请求：

. 连接器向Windows网关服务发送HTTP请求。
.  Windows网关服务收到HTTP请求。
.  Windows网关服务使用`net.tcp`协议执行针对Dynamics AX系统服务的请求。
.  Windows网关服务接收来自Dynamics AX系统服务的响应。
.  Windows网关服务通过HTTP将响应发送到连接器。
. 连接器接收到响应。

Anypoint Platform和Windows Gateway Services之间的所有通信均通过SSL进行身份验证和保护。

image:protocol-translation.png[协议翻译]

== 安装此连接器

. 在Anypoint Studio中，点击Studio任务栏中的Exchange图标。
. 点击Anypoint Exchange中的登录。
. 搜索连接器，然后单击安装。
. 按照提示安装连接器。

Studio有更新时，会在右下角显示一条消息，您可以单击该消息来安装更新。

== 配置连接器

=== 第1步：创建一个新的Mule项目

打开*Anypoint Studio*并创建一个新项目：

. 从菜单中选择*File*> *New*> *Mule Project*。
. 在*New Mule Project*窗口中，输入*ax-demo*作为*Project Name*。
. 点击*Finish*。

=== 第2步：创建和配置新的Microsoft Dynamics AX全局元素

配置连接器的连接：

. 点击*Global Elements*标签。
. 点击*Create*，弹出*Global Type*对话框。
. 在*Search*文本框中输入*ax*。
. 选择*Microsoft Dynamics AX: Gateway Connection*并点击*OK*。
. 填写所需的参数：
+
[%header,cols="2*"]
|===
| {参数{1}}说明
| *Username*  |连接到Dynamics AX的用户名。
| *Password*  |连接到Dynamics AX的密码。
| *AOS Server Name*  |运行*Application Object Server*的服务器的名称或IP。
| *AOS Services WSDL Port*  |（1.1.0及更高版本）WSDL服务运行的端口号。默认端口号是`8101`。
| *Gateway Router Service Uri*  | *Windows Gateway Services*的地址（主机和端口）。该地址通常与`https://myserver.com:9333/router`类似。
| *AOS Services Endpoint Port (Optional)*  |（1.1.0及更高版本）使用此配置来覆盖Services的WSDL文档中指定的服务端点。
|===
+
.Microsoft Dynamics AX 2012连接器全局元素<v1.0.0
image:microsoft-dynamics-ax-2012-connector-gateway-global-element.png[ v1及以下]
+
.Microsoft Dynamics AX 2012连接器全局元素v1.1.0及更高版本
image:microsoft-dynamics-ax-2012-connector-e7cee.png[v1.1.0及以上版本]
. 点击*Test Connection*以确保连接正常工作。
. 连接成功后，点击*OK*。

=== 第3步：创建查询Dynamics AX的流程

创建一个Mule流来查询"ProjTable"。

image:query-table-flow.png[查询表流]

要创建Mule流，请按照下列步骤操作：

. 点击*Message Flow*标签。
. 搜索*http*并将*HTTP*连接器拖动到画布上。这创建了一个新的流程。
. 搜索*ax*，然后将*HTTP*连接器旁边的*Microsoft Dynamics AX 2012*连接器拖动到*Process*区域。
. 搜索*json*，然后将*Object to JSON*变压器拖到*Microsoft Dynamics AX 2012*旁边。
. 双击*HTTP*连接器。点击*Connector Configuration*列表旁边的加号（*+*）。
. 在*HTTP Listener Configuration*窗口中，确保*Protocol*设置为*HTTP*，*Host*设置为*All Interfaces [0.0.0.0] (Default)*，*Port*为设为*8081*。点击*OK*。
. 在*Basic Settings*下，将*Path*设置为*/query*。
. 双击*Microsoft Dynamics AX 2012*并更新以下配置值：
.. 从*Connector Configuration*列表中选择先前创建的*Microsoft Dynamics AX 2012  Connector*配置。
.. 从*Operation*列表中选择*Query table*。
.. 从*Language*列表中点击*DataSense Query Language*。
.. 点击*Query Builder…*
.. 从*Types*列表中选择*ProjTable*。
.. 从*Fields*列表中选择*ProjId*和*ProjGroupId*。
.. 从*Order By*下拉列表中选择*ProjId*。
.. 从*Direction*下拉列表中选择*DESCENDING*。
+
// image:query-table-config.png[查询表配置]
+
. 点击*OK*。

=== 第4步：运行流程

. 在*Package Explorer*中，右键单击*demo-ax*，然后选择*Run As*> *Mule Application*。
. 检查控制台以查看应用程序何时启动。如果没有发生错误，您应该看到以下消息：
+

[source, code, linenums]
----
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+ Started app 'ax-demo'                                    +
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
[main] org.mule.module.launcher.DeploymentDirectoryWatcher:
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+ Mule is up and kicking (every 5000ms)                     +
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
[main] org.mule.module.launcher.StartupSummaryDeploymentListener:
**********************************************************************
*              - - + DOMAIN + - -               * - - + STATUS + - - *
**********************************************************************
* default                                       * DEPLOYED           *
**********************************************************************
 
*************************************************************************************
* - - + APPLICATION + - -            *       - - + DOMAIN + - -      * - - + STATUS *
*************************************************************************************
* ax-demo                          * default                       * DEPLOYED       *
*************************************************************************************
----

. 打开Internet浏览器并访问http：// localhost：8081 / query
. 按降序排列的帐户列表应以JSON格式返回（结果因您的AX实例而异）。
+
[source, code]
----
[{"ProjId":"DAT-000009","ProjGroupId":"Group-2"},{"ProjId":"DAT-000008","ProjGroupId":"Group-1"},{"ProjId":"DAT-000007","ProjGroupId":"Group-0"}]
----

== 使用连接器

=== 名称空间和架构

在Studio中设计应用程序时，将连接器从调色板拖放到Anypoint Studio画布上的操作应自动使用连接器*namespace*和*schema location*填充XML代码。

*Namespace:* `http://www.mulesoft.org/schema/mule/dynamicsax`
*Schema Location:* `http://www.mulesoft.org/schema/mule/dynamicsax/current/mule-dynamicsax.xsd`

[TIP]
如果您在Studio的XML编辑器或其他文本编辑器中手动编写Mule应用程序，请将这些粘贴到`<mule>`标记内的*Configuration XML*的标题中。

[source, xml]
----
<mule xmlns:dynamicsax="http://www.mulesoft.org/schema/mule/dynamicsax"
  ...
  xsi:schemaLocation="http://www.mulesoft.org/schema/mule/dynamicsax http://www.mulesoft.org/schema/mule/dynamicsax/current/mule-dynamicsax.xsd">
  ...
  <flow name="yourFlow">
  ...
  </flow>
</mule>
----

=== 使用呼叫上下文

连接器支持在每次调用中提供一个固定的 link:https://technet.microsoft.com/en-us/library/hh582244.aspx[呼叫上下文]，可以在配置选项卡上使用相同的名称进行设置。

在配置部分中，您可以设置以下内容：

[%header,cols="2*"]
|===
|设定 |说明
| *Company*  |这是执行服务操作的数据的Microsoft Dynamics AX公司。
如果未指定公司，则使用主叫用户的默认公司。
| *Language*  |这是用于显示消息的语言的Microsoft Dynamics AX语言ID。
Language的默认值是'en-us'。
| *Logon As User*  |这是执行服务操作的Microsoft Dynamics AX用户。它使用提交用户（主叫用户）格式为“域\用户”。
如果未指定LogonAsUser，则使用进行服务操作调用的用户。默认用户取决于所选的适配器。例如，当您使用文件系统适配器时，默认用户是文件所在文件夹的所有者。
| *Message ID*  |这是唯一标识每个文档的GUID。
如果您未指定消息标识，则系统会生成一个消息标识。但是，如果要标识要调试的特定消息，则必须将消息标识指定为调用上下文的一部分。
| *Partition Key*  |该值标识包含服务操作引用的数据的分区。
PartitionKey的默认值是为主叫用户设置的默认分区。
|===

=== 操作

==== 查询表

在 link:https://msdn.microsoft.com/EN-US/library/bb314725.aspx[AOT表]上运行查询。

==== 静态查询

运行 link:https://msdn.microsoft.com/en-us/library/bb394994.aspx[AOT静态查询]。

===== 静态查询输入

下表详细说明了操作的输入参数。

[%header,cols="2*"]
|===
| {参数{1}}说明
| staticQueryName  |要执行的静态查询的名称。
| fetchSize  |分页结果的页面大小。
| _消息负载_  |对于接受输入参数的静态查询，使用参数名称和值的`Map<String, Object>`。
|===

===== 静态查询输出

包含静态查询结果的列表。

==== 文档服务

拨打 link:https://technet.microsoft.com/EN-US/library/bb496530.aspx[AIF文件服务]。

===== 文档服务输入

下表详细说明了操作的输入参数。

[%header%autowidth.spread]
|===
| {参数{1}}说明
| serviceAndSoapActionUri  |文档服务名称和SOAP操作URI，连接格式为：+
`_service-name soapActionUri_`
| _消息有效载荷_  |发送到操作的XML文档。
|===

===== 输出

调用文档服务操作的结果。


=== 在Mavenized Mule应用程序中使用连接器

如果您正在编写Mavenized Mule应用程序，则此XML片段必须包含在您的`pom.xml`文件中。

[source,xml,linenums]
----
<dependency>
  <groupId>org.mule.modules</groupId>
  <artifactId>mule-module-dynamics-ax-2012</artifactId>
  <version>1.1.2</version>
</dependency>
----

[TIP]
====
在`<version>`标签内，为最新版本提供所需的版本号，单词`RELEASE`，或者为最新版本提供`SNAPSHOT`。迄今为止的可用版本是：

*  *1.1.2*
*  *1.1.1*
*  *1.1.0*
*  *1.0.0*
====




使用连接器演示应用程序== 

=== 开始演示

. 在Studio中导入项目文件夹。
. 更新`/src/main/app/mule-app.properties`中的Microsoft Dynamics AX连接参数。
. 点击*Test Connection*以确保连接正常工作。
. 运行应用程序。

=== 运行演示

演示包括以下操作：

* 查询*ProjTable*表中的所有项目：+
  `http://localhost:8081/projects`
* 列出所有项目（静态查询*ProjListProjectTable*）：+
  `http://localhost:8081/list-projects`
* 通过ProjId获取项目（静态查询*ProjListProjectTable*）：`http://localhost:8081/list-projects?ProjId={projid}`


== 另请参阅

*  link:https://www.microsoft.com/en-us/dynamics/erp-ax-overview.aspx[Microsoft Dynamic AX站点]
*  link:/mule-user-guide/v/3.8/windows-gateway-services-guide[Windows网关服务]
